added new proposals and completion tests